--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "latest",
+    "flux": "^3.1.3",
+    "object-assign": "^4.1.1",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "superagent": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
