--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "flux": "^3.1.3",
+    "load-json-file": "^5.2.0",
     "object-assign": "^4.1.1",
     "prop-types": "latest",
     "react": "latest",
