--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest",
-    "superagent": "^4.1.0"
+    "superagent": "^4.1.0",
+    "typeface-comfortaa": "0.0.72"
   },
   "scripts": {
     "start": "react-scripts start",
